plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.10'
    id 'io.spring.dependency-management' version '1.1.0'

}

group = 'com.everyonegarden'
version = '1.0'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Security 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //JWT 토큰 생성
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    //webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // Lomnok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // AWS
    implementation platform("software.amazon.awssdk:bom:2.19.1")
    implementation 'software.amazon.awssdk:s3-transfer-manager'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //json
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'



    //junit
    testImplementation("org.junit.vintage:junit-vintage-engine") {
        exclude group: "org.hamcrest", module: "hamcrest-core"
    }

    runtimeOnly 'com.mysql:mysql-connector-j'



}


dependencyManagement {
    imports {
        mavenBom "software.amazon.awssdk:bom:2.19.1"
    }
}


tasks.named('test') {
    useJUnitPlatform()
}


